2013-12-10  tino

	* [r9492] AUTHORS, CMake/DebSourcePPA.cmake, CMake/FindBoost.cmake,
	  CMake/FindICU.cmake, CMakeLists.txt, COPYING, ChangeLog,
	  Doxyfile, INSTALL, LICENSE, NEWS, README, TODO, all2unix.pl,
	  cg3.g, cg3.pc.in, cmake.sh, compile-profile.sh, dist/Portfile,
	  dist/dist-osx.pl, dist/osx/vislcg3, emacs/cg.el, get-boost.sh,
	  include/cycle.h, include/exec-stream/exec-stream.cpp,
	  include/exec-stream/exec-stream.h,
	  include/exec-stream/posix/exec-stream-helpers.cpp,
	  include/exec-stream/posix/exec-stream-helpers.h,
	  include/exec-stream/posix/exec-stream-impl.cpp,
	  include/exec-stream/win/exec-stream-helpers.cpp,
	  include/exec-stream/win/exec-stream-helpers.h,
	  include/exec-stream/win/exec-stream-impl.cpp, include/uoptions.h,
	  license.icu.txt, make-naive.sh, manual/bibliography.xml,
	  manual/binarygrammar.xml, manual/cgglossary.xml,
	  manual/cgkeywords.xml, manual/chapterize.sh,
	  manual/cmdreference.xml, manual/combine.sh,
	  manual/compatibility.xml, manual/contexts.xml,
	  manual/contributing.xml, manual/dependencies.xml,
	  manual/drafts.xml, manual/externals.xml, manual/faq.xml,
	  manual/generate.sh, manual/grammar.xml, manual/installation.xml,
	  manual/intro.xml, manual/make-dist.sh, manual/manual.xml,
	  manual/parentheses.xml, manual/pdf.sh, manual/probabilistic.xml,
	  manual/relations.xml, manual/rules.xml, manual/sets.xml,
	  manual/singlefile.sh, manual/streamcmds.xml,
	  manual/streamformats.xml, manual/subreadings.xml,
	  manual/tags.xml, manual/templates.xml, manual/validate.sh,
	  manual/xsl-fo.sh, newsletters/2007-03-29.txt,
	  newsletters/2007-12-04.txt, newsletters/2008-01-24.txt,
	  newsletters/2008-03-06.txt, newsletters/2008-05-20.txt,
	  newsletters/2008-07-15.txt, newsletters/2008-08-25.txt,
	  newsletters/2008-09-11.txt, newsletters/2008-09-20.txt,
	  newsletters/2008-11-10.txt, newsletters/2009-01-08.txt,
	  newsletters/2009-02-21.txt, newsletters/2009-05-13.txt,